--- a/app3_counterApp/public/index.html
+++ b/app3_counterApp/public/index.html
@@ -7,15 +7,24 @@
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Hello World!</title>
+    <link href="../public/style.css" rel="stylesheet">
+    <title>カウンターアプリ</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
-    <button type="button" class="btn btn-primary">Primary</button>
+    <div class="wrapper">
+      <div class="header">
+        <h1>ただ。ボタンをタップするだけです</h1>        
+      </div>
+      <div class="content">
+        <div class="countBlock">
+          <span class="count"></span>
+        </div>
+        <div>
+          <button type="button" class="btn-count btn btn-primary">Push</button>          
+          <button type="button" class="btn-clear btn btn-default">Clear</button>          
+        </div>
+      </div>
+    </div>
 
     <script src="../build/app.js"></script>
   </body>
