--- a/app4_createApp/src/index.html
+++ b/app4_createApp/src/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>💖 Hello World!2</h1>
     <p>もしかしなくてもホットリロード効く</p>
+
+    <button type="button" class="btn-dir btn btn-primary btn-lg btn-block">フォルダ選択</button>
   </body>
 </html>
