ルームIDを自動生成する処理を追加

--- a/app5_createApp5/src/index.html
+++ b/app5_createApp5/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>試験</title>
+  <title>コードは丸パクリとかはしてないはず・・・</title>
 
 </head>
 
@@ -21,7 +21,12 @@
           placeholder="socketioサーバのURL" value="http://localhost:3001">
       </div>
       <div class="mb-3">
-        <label for="roomidFormControlInput" class="form-label">ルームID</label>
+        <label for="roomidFormControlInput" class="form-label">
+          ルームID
+          <button type="button" class="btn-code btn btn-info btn-sm" style="margin-left: 15px;">
+            ルームID生成
+          </button>   
+        </label>
         <input type="email" class="form-control" id="roomidFormControlInput" 
           placeholder="ルームID" value="testRoom">
       </div>
